--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat Web - Cliente ICE</title>
     <link rel="stylesheet" href="src/styles/main.css">
+    <link rel="stylesheet" href="src/styles/message-style.css">
     
     <!-- Cargar Ice.js -->
     <script src="./node_modules/ice/lib/Ice.js"></script>
@@ -119,7 +120,7 @@
                         <svg width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
                             <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
                         </svg>
-                        <h2>Bienvenido a ChatWeb</h2>
+                        <h2>Bienvenido a Chat-JJJ</h2>
                         <p>Selecciona un usuario o grupo para comenzar a chatear</p>
                     </div>
                 </div>
@@ -247,11 +248,10 @@
         </div>
         <div class="call-actions">
             <button id="end-call-btn" class="btn btn-danger">Terminar Llamada</button>
-            <button id="mute-btn" class="btn btn-secondary">Silenciar</button>
         </div>
     </div>
 </div>
-<!-- Agregar este HTML al final del body, antes de cerrar </body> -->
+
 
 <!-- Modal de Grabación de Audio -->
 <div id="recording-modal" class="modal">
